2010-05-24  Andreia Gaita  <avidigal@novell.com>

	* ScriptObjectHelper.cs: update LookupScriptObject call

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* ScriptObjectHelper.cs (ObjectFromValue<T>): don't leak Values.

2010-03-17  Chris Toshok  <toshok@ximian.com>

	* ScriptObjectHelper.cs: for the Kind.NPOBJ case, return null if
	we're supposed to be creating an actual object (and not returning
	IntPtr) and v.u.p == IntPtr.Zero.

2010-03-10  Andreia Gaita  <avidigal@novell.com>

	* ScriptObjectHelper.cs: Fix the mouse button mapping from the
	browser 'button' arg to the MouseButtons enum

2010-01-08  Andreia Gaita  <avidigal@novell.com>

	 * ScriptableObjectGenerator.cs: Simplify type validation, and
	be less strict, it only needs to really fail when calling
	RegisterScriptableType.
	Only register *EventListener methods if there are exposed events
	on the type

2010-01-05  Andreia Gaita  <avidigal@novell.com>

	* ScriptableObjectGenerator.cs: fix validation to check if
	array/generic underlying types are native supported types

2009-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* ScriptableObjectGenerator.cs: Seal internal class
	[Found using Gendarme]

	r: rolf

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* WebApplication.cs: remove from svn

	r: andreia

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ScriptableObjectGenerator.cs: Use HtmlPage instead of 
	WebApplication. Avoid allocation of Type[0] by using 
	Type.EmptyTypes (gendarme).
	* WebApplication.cs: Move registration code to HtmlPage.

	r: rolf

2009-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicationUnhandledExceptionEventArgs.cs: Unused, the real class
	exists in System.Browser.dll
	* WebApplication.cs: Remove unused code (it's available elsewhere
	and unused from this instance)

2009-08-27  Chris Toshok  <toshok@ximian.com>

	* ScriptableObjectGenerator.cs (TryChangeType): the ScriptObject
	might not correspond to a managed object at all.  If it doesn't,